--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dental Patient Registration DARK</title>
+  <title>Dental Patient Registration</title>
   <link href="https://fonts.googleapis.com/css?family=Inter:500,700&display=swap" rel="stylesheet" />
   <style>
     :root {
@@ -290,7 +290,7 @@
 
   <script>
     // CORRECTED API URL - Single endpoint only
-    const API_URL = "https://script.google.com/macros/s/AKfycbypoocXP5XtIhHgWX1jhrVf920Ch5rbxJOdwjWBl7nLE8tGgOyO6Rqr_iMWNFnO9QcLow/exec";
+    const API_URL = "https://script.google.com/macros/s/AKfycbwCTkUI4xSdyVTkgAO9EeWE2RR6F7YMrrrCqqM-MHOfW2qGmVfrK7Pz6P439PeUiUOq/exec";
 
     const regForm = document.getElementById("regForm");
     const statusMsg = document.getElementById("statusMsg");
