--- a/index.html
+++ b/index.html
@@ -289,10 +289,8 @@
   </div>
 
   <script>
-    // CORS Proxy + Apps Script API URL
-    const CORS_PROXY = "https://cors-anywhere.herokuapp.com/";
-    const API_BASE = "https://script.google.com/macros/s/AKfycbxQz-BL5mxHcSMSS-uyC_MblnMpS_ye5_VYUqm9QHmdYWV16izKNCFmrVceR-3rtlMBpw/exec";
-    const API_URL = CORS_PROXY + API_BASE;
+    // Use Vercel API Route (No external CORS proxy needed!)
+    const API_URL = "/api/proxy";
 
     const regForm = document.getElementById("regForm");
     const statusMsg = document.getElementById("statusMsg");
