--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Dental DARK</title>
+  <title>Dental Patient Registration</title>
   <link href="https://fonts.googleapis.com/css?family=Inter:500,700&display=swap" rel="stylesheet" />
   <style>
     :root {
